# Integration-of-Content-Platform-Engineer-with-BHIV-Analysis

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  app.py  bhiv_bucket.py  bhiv_core.py  bhiv_lm_client.py  deploy.py  deploy.sh  docker-compose.yml  migrate_videos.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  run.bat  run.py  run_pipeline.py  run_simple.py  run_with_theme.py  smoke_test.py  start_streamlit.py  streamlit_app.py  streamlit_cloud_app.py  test_simple.py
.github/workflows/: ci.yml
analytics/: advanced_analytics.py  feedback_analyzer.py
backend/: server.py
bucket/scripts/: a85d7feb_script.txt
bucket/storyboards/: 3787e61f_storyboard.json
data/: 55377f0d_script.txt  55377f0d_storyboard.json  70780be7_storyboard.json  d9e4523f_script.txt  df33dcaf_storyboard.json  ec98193d_storyboard.json  f72e2924_script.txt  f72e2924_storyboard.json  weights.json
data/storyboards/: sample_storyboard.json
deployment/: DEPLOY_GUIDE.md  README.md  app.py  auth_manager.py  bhiv_bucket.py  bhiv_lm_client.py  main_run.py  requirements.txt  run.bat  setup.py
deployment/backend/: server.py  server_minimal.py
deployment/security/: auth.py
deployment/video/: bhiv_integration.py  generator.py  storyboard.py
docs/: API.md  DEPLOYMENT.md
frontend/: index.html
reports/: daily_log.txt  day1_reflection.md  day2_reflection.md  day3_reflection.md  final_reflection.md  reflection.md
reports/runs/: 425ab63e.json  70780be7.json  881bc0e5.json  8821a5c2.json  9213ce87.json  ce5c4d44.json  cfe5f299.json  ec98193d.json
security/: config.py
tests/: test_api.py  test_bhiv_bucket.py  test_bhiv_core.py
video/: __init__.py  feedback_adapter.py  generator.py  storyboard.py
